Minor fix to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,9 @@ target/
 # exclude data from source control by default
 #/data
 
+# Exclude test notebooks
+test-package.ipynb
+
 # Mac OS-specific storage files
 .DS_Store
 
