--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.ORG_PAT_TOKEN }}
         with:
           tag_name: ${{ steps.get_tag.outputs.TAG_NAME }}
           name: Release ${{ steps.get_tag.outputs.TAG_NAME }}
